--- a/tutorial.bundle/.classpath
+++ b/tutorial.bundle/.classpath
@@ -4,4 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="lib" path="lib/dependencies/groovy-all-2.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/dependencies/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/dependencies/junit-dep-4.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/dependencies/spock-core-0.7-groovy-2.0.jar"/>
 </classpath>
